...
    "tab.profile": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Profile"
          }
        },
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "我的"
...
